--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html
     head
+        script(src="https://kit.fontawesome.com/2a8754c2b0.js", crossorigin="anonymous")
         title WeTube
     body
-        header
-            h1 WeTube
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; WeTube
+        include ../partials/footer
