--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,4 +1,11 @@
 extends layouts/main
 
 block content
-    p Edit Profile
+    .form-container
+        form(action=routes.editProfile, method="post")
+            label(for="avatar") Avatar
+            input(type="file" id="avatar" name="avatar")
+            input(type="text", placeHolder="Name", Name="name")
+            input(type="email", placeHolder="Email", Name="email")
+            input(type="submit", value="Update Profile")
+        a.form-container__link(href=`/users${routes.changePassword}`) Change Password
