--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,6 +1,7 @@
 //- video라는 인자, default {}
 mixin videoBlock(video = {})
     .videoBlock
-        video.videoBlock__thumbnail(src=video.videoFile, controls=true)
-        h4.videoBlock__title= video.title
-        h4.videoBlock__view= video.views
+        a(href=routes.videoDetail(video.id))
+            video.videoBlock__thumbnail(src=video.videoFile, controls=true)
+            h4.videoBlock__title= video.title
+            h4.videoBlock__view= video.views
